examples/test/testpolicy10447.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10447
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key34: value29
      key16: value5
      key22: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value0
      podSelector:
        matchLabels:
          key15: value24
